--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">AndroidArt</string>
+    <string name="drawer_open">open</string>
+    <string name="drawer_close">close</string>
+
+    <string name="btn_save_file">保存文件sp</string>
+    <string name="btn_read_file">读取文件sp</string>
+    <string name="et_content">please enter content</string>
+    <string name="item_navigation">item_navigation</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="item_navigation2">item_navigation2</string>
+    <string name="item_splash">item_splash</string>
+    <string name="title_activity_navigation2">NavigationActivity2</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="btn_jump_main">跳转到主界面</string>
 </resources>
