--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
 
     <string name="action_settings">Settings</string>
     <string name="btn_jump_main">跳转到主界面</string>
+    <string name="btn_jump">跳转</string>
+    <string name="btn_save_data">存储数据</string>
+    <string name="btn_get_data">获取数据</string>
+    <string name="btn_messenger">进程间通信(messenger)</string>
+    <string name="btn_aidl">进程间通信(aidl)</string>
 </resources>
