1.进程间通信,ContentProvider,创建provider,服务器端BookProvider,客户端访问BookProviderActivity 2.bean实现Parcelable接口User1,Book,以后尽量使用Parcelable,因为aidl不支持Serializable接口 3.Binder连接池,处理多个aidl的情况,创建一个BinderPool,只要使用一个Service就可以完成任务了(testModule)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="btn_get_data">获取数据</string>
     <string name="btn_messenger">进程间通信(messenger)</string>
     <string name="btn_aidl">进程间通信(aidl)</string>
+    <string name="btn_provider">进程间通信(provider)</string>
+    <string name="btn_socket_tcp">进程间通信(socket tcp)</string>
+    <string name="btn_send">发送</string>
+    <string name="tv_content">text</string>
 </resources>
