--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="btn_socket_tcp">进程间通信(socket tcp)</string>
     <string name="btn_send">发送</string>
     <string name="tv_content">text</string>
+    <string name="btn_binder">binder线程池</string>
 </resources>
