--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="btn_send">发送</string>
     <string name="tv_content">text</string>
     <string name="btn_binder">binder线程池</string>
+    <string name="btn_circle">自定义View(圆)</string>
 </resources>
